--- a/tests/console.html
+++ b/tests/console.html
@@ -30,33 +30,19 @@ var TTT_MODEL = new ludorum_player_ml.TicTacToeGameModel(),
 	</tr></table>
 	<p style="text-align:center;"><a href="mailto:leonardo.val@creatartis.com">&copy; 2017 Leonardo Val</a> - <a href="https://github.com/LeonardoVal/ludorum-classifier-player.js" target="_blank">ludorum-classifier-player.js</a>
 	</p>
-<script type="text/javascript"> "use strict"; function main() {
-		require.config({
-			paths: {
-				'creatartis-base': 'lib/creatartis-base.min',
-				'sermat': 'lib/sermat-umd',
-				'ludorum': 'lib/ludorum.min',
-				'ludorum-player-ml': 'lib/ludorum-player-ml'
-			}
-		});
-		require(['creatartis-base', 'sermat', 'ludorum', 'ludorum-player-ml'],
-				function (base, Sermat, ludorum, ludorum_player_ml) {
-			window.base = base;
-			window.Sermat = Sermat;
-			window.ludorum = ludorum;
-			window.ludorum_player_ml = ludorum_player_ml;
-		}, function (error) {
-			throw error;
-		});
-		Array.prototype.slice.call(document.querySelectorAll('#reference tr td a'))
-		.forEach(function (jsLink) {
-			var code;
-			if (jsLink.href === "javascript:") {
-				code = JSON.stringify(''+
-					(jsLink.getAttribute('data-code') || jsLink.textContent)
-				);
-				jsLink.href="javascript:console.info("+ code +");console.log(eval("+ code +"));";
-			}
-		});
-	}</script>
+<script type="text/javascript"> require(['require-config'], function (init) {
+	init(['creatartis-base', 'sermat', 'ludorum', 'ludorum-player-ml'],
+	function (base, Sermat, ludorum, ludorum_player_ml) {
+	});
+	Array.prototype.slice.call(document.querySelectorAll('#reference tr td a'))
+	.forEach(function (jsLink) {
+		var code;
+		if (jsLink.href === "javascript:") {
+			code = JSON.stringify(''+
+				(jsLink.getAttribute('data-code') || jsLink.textContent)
+			);
+			jsLink.href="javascript:console.info("+ code +");console.log(eval("+ code +"));";
+		}
+	});
+}); </script>
 </body></html>
