--- a/tests/console.html
+++ b/tests/console.html
@@ -10,7 +10,7 @@ a { color:black; text-decoration:none; }
 #reference tr td:nth-child(1) { font-family:"Courier New",Courier,monospace; background-color:black; color:white; }
 #reference tr td:nth-child(1) a { color:white; }
 	</style>
-	<script type="text/javascript" src="lib/require.js"></script>
+	<script type="text/javascript" src="../node_modules/requirejs/require.js"></script>
 </head><body onload="main();">
 	<h1><a href="https://github.com/LeonardoVal/ludorum-player-ml.js" target="_blank">ludorum-classifier-player</a> tester</h1>
 	<p>Open your browser Javascript console. In Windows use: Ctrl+Shift+J in Chrome, Ctrl+Shift+K in Firefox,
